tightened up login layout and other corrected under_construction.html issue of not showing username

--- a/live-static/static-root/accounts/css/login.css
+++ b/live-static/static-root/accounts/css/login.css
@@ -49,10 +49,8 @@
 
 .page-footer {
     background: #333;
-    padding-top: 85px;
-    padding-bottom: 200px;
-    margin-top: -150px;
-    margin-bottom: 0;
+    padding: 170px;
+    bottom: 0;
     font-size: 1.4em;
     font-weight: normal;
     text-transform: uppercase;
@@ -67,7 +65,7 @@
     text-transform: uppercase;
     color: white;
     font-size: 35px;
-    margin: -50px 0 0 0;
+    margin: -90px 0 0 0;
 }
 
 .footer-options a {
@@ -118,7 +116,7 @@
 
 .form header {
     background-color: white;
-    width: 100%
+    width: 100%;
 
 }
 
@@ -142,11 +140,11 @@
     position: relative;
     z-index: 1;
     background: #333;
-    max-width: 360px;
     padding: 35px;
     text-align: center;
+    max-width: 360px;
+    margin: 0 auto 85px;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    margin: 0 auto 225px;
 }
 /*.form input {*/
   /*font-family: "Righteous", sans-serif;*/
@@ -230,7 +228,7 @@ body {
   background: linear-gradient(to left, white, #f7f9fe);
   font-family: "Righteous", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .login-header {
